src/objects/AMS_AgencyChangesConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>TCA_Application_withdrawal__c</fullName>
        <description>Change Code to be applied after application withdrawal</description>
        <inlineHelpText>Change Code to be applied after application withdrawal</inlineHelpText>
        <label>Application withdrawal</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCA_Fields_to_Migrate__c</fullName>
        <label>Fields to Migrate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCA_Manager_approval__c</fullName>
        <description>Change Code to be applied after manager approval</description>
        <inlineHelpText>Change Code to be applied after manager approval</inlineHelpText>
        <label>Manager approval</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCA_Not_Applicable_Steps__c</fullName>
        <label>Not Applicable Steps</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCA_Sanity_check__c</fullName>
        <label>Sanity check</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TC_Legal_status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TC_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TC_Location_type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Location type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TC_Location_with_inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Location with inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TC_Major_Shareholding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Major Shareholding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TC_Minor_Shareholding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Minor Shareholding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TC_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TC_Ownership_to_IATA_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ownership to IATA Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TC_Ownership_to_non_IATA_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ownership to non-IATA Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TC_VMFR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VMFR</label>
        <type>Checkbox</type>
    </fields>
    <label>AMS Agency Changes Configuration</label>
</CustomObject>